Subido tiempo token + redistribuidos trayectos